# wordler

./: .gitignore  LICENSE  Procfile  README.md  car_sales_test_bot.py  database_example.py  echobot.py  pyproject.toml  requirements.txt
src/: bot.py  database_connection.py
tests/: conftest.py  shared_test_cases.py  test_bot.py  test_text_handling.py
tests/handlers/: message_handlers_test.py
tests/models/: subscribed_chat_test.py  user_test.py  wordle_test.py
wordler/: bot.py  crud.py  database.py  models.py  text_handling.py  wordler.py
wordler/db/: crud (# Edit conflict 2026-04-10 qjsw71C #).py  crud.py  database.py  models.py
wordler/handlers/: command_handlers.py  message_handlers.py
