[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "wordler"
version = "0.0.1"
authors = [
  { name="Jakob Blaschke"},
]
description = "A package containing some tools for a Telegram bot that can count statistics."
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[tool.pytest.ini_options]
addopts = "-sv"